--- a/react核心及周边/my_redux_toolkit/package.json
+++ b/react核心及周边/my_redux_toolkit/package.json
@@ -12,6 +12,7 @@
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
