--- a/react核心及周边/cms/cms-api/package.json
+++ b/react核心及周边/cms/cms-api/package.json
@@ -7,23 +7,23 @@
     "declarations": true
   },
   "dependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/types": "^7.18.7",
-    "egg": "^2.15.1",
-    "egg-mysql": "^3.1.1",
-    "egg-scripts": "^2.11.0",
+    "@babel/core": "^7.26.0",
+    "@babel/types": "^7.26.0",
+    "egg": "^3.17.5",
+    "egg-mysql": "^4.0.0",
+    "egg-scripts": "2",
     "egg-view-nunjucks": "^2.3.0",
     "fs-extra": "^10.1.0",
-    "moment": "^2.29.3"
+    "moment": "^2.30.1"
   },
   "devDependencies": {
-    "autod": "^3.0.1",
+    "autod": "^3.1.2",
     "autod-egg": "^1.1.0",
-    "egg-bin": "^4.11.0",
-    "egg-ci": "^1.11.0",
-    "egg-mock": "^3.21.0",
-    "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "egg-bin": "^4.20.0",
+    "egg-ci": "^1.19.1",
+    "egg-mock": "^3.26.0",
+    "eslint": "^5.16.0",
+    "eslint-config-egg": "^7.5.1"
   },
   "engines": {
     "node": ">=10.0.0"
