--- a/react核心及周边/cms/cms-front/package.json
+++ b/react核心及周边/cms/cms-front/package.json
@@ -16,8 +16,7 @@
     "ahooks": "^3.5.0",
     "antd": "^4.20.7",
     "moment": "^2.29.3",
-    "query-string": "^7.1.1",
-    "umi": "^4.0.2"
+    "query-string": "^7.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
